# image-processor

./: .gitignore  CMakeLists.txt  README.md  bash.sh
env/: token.txt
env/docs/: file0.txt
include/: stb_image.h
src/: bot.cpp  bot.h  image_processor.cpp  image_processor.h  image_processor.hpp  main.cpp
